# tmspp

./: .gitignore  LICENSE  README.md  environment.yml  jp_environment.yml  test_environment.yml
.github/workflows/: meta.yaml  test.yaml
data/validation-locations/: 2023-24-insitu-poly.geojson  2023-24-insitu-pts.geojson  glws-tmsos-baseline-comparison-locations-pts.geojson
notebooks/: 00-papermill.py  02-sentinel-2-data.ipynb  02.1-easysnowdata.ipynb  02.2-easysnowdata-hls.ipynb  02.3-swot.ipynb  02.3-swot.ipynb.ipynb  02.5-easysnowdata-hls-all-bands.ipynb  02.6-TMS-OS.ipynb  02.6-TMS-OS.py  02.6-sentinel6.ipynb  03-classification.ipynb  03.1-classification-pekel.ipynb  03.1-classification-visualization.ipynb  03.10.F-trend-correction.ipynb  03.11-GLWS-storage.ipynb  03.12-icesat.ipynb  03.3-classification-swot.ipynb  03.4-classification-swot-nadir-altimeter.ipynb  03.5-sentinel6.ipynb  03.6.1-aevcurve.ipynb  03.6.2-srtm-aec.py  03.6.3-in-situ-aev-curve.ipynb  03.8-TMSOSPP.ipynb  03.9-storage-calculator-insitu-aev.ipynb  03.9-storage-calculator-sat-aev.ipynb  03.9-storage-calculator.ipynb  04-test.ipynb  05.2-average-revisit-time.ipynb
src/: pyproject.toml  setup.py
src/tmsswot/: classify.py  data.py  hls-data.py
tests/: test_hls.py  test_imports.py
