
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tmsswot"
version = "0.0"
authors = [
  { name="Pritam Das", email="pdas47@uw.edu" },
]
description = "Multi satellite reservoir and lake monitoring tool"
requires-python = ">=3.6"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/UW-SASWE/tms-swot"
"Bug Tracker" = "https://github.com/UW-SASWE/tms-swot/issues"